--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,4 @@
-
-name: CI - Coach Sportif API
+name: CI – Coach Sportif API
 
 on:
   push:
@@ -12,19 +11,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: 📥 Checkout repository
-      uses: actions/checkout@v3
+      - name: 📥 Checkout repository
+        uses: actions/checkout@v3
 
-    - name: 🐍 Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.9'
+      - name: 🐍 Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
 
-    - name: 📦 Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: 📦 Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: ✅ Test API launch
-      run: |
-        python -c "import joblib; joblib.load('model_reco.pkl'); joblib.load('model_perf.pkl')"
+      - name: ✅ Run tests
+        run: |
+          pytest test_main.py
+
+      - name: 📦 Load models (sanity check)
+        run: |
+          python -c "import joblib; joblib.load('model_reco.pkl'); joblib.load('model_perf.pkl')"
