--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      - name: 📁 Create static folder if missing
+        run: mkdir -p static
 
       - name: ✅ Run tests
         run: |
